Applied some styling to groups and items and fixed problem with closing groups

--- a/timeline/src/components/vis-timeline.patch.css
+++ b/timeline/src/components/vis-timeline.patch.css
@@ -9,3 +9,11 @@
 .vis-item.vis-line {
   left: 0;
 }
+
+.vis-group:nth-child(even) .vis-item {
+  background-color: #DBA2A1;
+}
+
+.vis-group:nth-child(odd) .vis-item {
+  background-color: #FCE1BE;
+}
